check the INFO log is enabled before logging to info level